<resources>
    <string name="a11y_no_data">No data</string>
    <string name="a11y_no_permission">No permission to access data</string>
    <string name="a11y_template_range">%1$f of %2$f</string>
    <string name="about_pref">About</string>
    <string name="activate_auto_download">Activate Auto Download</string>
    <string name="add_to_favorite_label">Add to Favorites</string>
    <string name="add_to_queue_label">Add to Queue</string>
    <string name="appearance">Appearance</string>
    <string name="audio_controls">Audio controls</string>
    <string name="automation">Automation</string>
    <string name="batch_edit">Batch edit</string>
    <string name="behavior">Behavior</string>
    <string name="buttons">Playback control buttons</string>
    <string name="crash_report_sum">Send the latest crash report via e-mail</string>
    <string name="crash_report_title">Crash Report</string>
    <string name="deactivate_auto_download">Deactivate Auto Download</string>
    <string name="download_pref_details">Details</string>
    <string name="experimental_pref">Experimental</string>
    <string name="external_elements">External elements</string>
    <string name="filter">Filter</string>
    <string name="integrations_label">Integrations</string>
    <string name="interruptions">Interruptions</string>
    <string name="load_complete_feed">Refresh complete podcast</string>
    <string name="mark_all_read_label">Mark all as played</string>
    <string name="mark_all_seen_label">Mark all as seen</string>
    <string name="mark_read_label">Mark as played</string>
    <string name="mark_unread_label">Mark as unplayed</string>
    <string name="media_player">Media player</string>
    <string name="network_pref">Network</string>
    <string name="open_podcast">Open Podcast</string>
    <string name="playback_pref">Playback</string>
    <string name="player_go_to_picture_in_picture">Picture-in-picture mode</string>
    <string name="pref_autoUpdateIntervallOrTime_sum">Specify an interval or a specific time of day to refresh the feeds automatically</string>
    <string name="pref_autoUpdateIntervallOrTime_title">Update Interval or Time of Day</string>
    <string name="pref_autodl_allow_on_mobile_sum">Allow automatic download over the mobile data connection.</string>
    <string name="pref_autodl_allow_on_mobile_title">Download on mobile connection</string>
    <string name="pref_autodl_wifi_filter_sum">Allow automatic download only for selected Wi-Fi networks.</string>
    <string name="pref_autodl_wifi_filter_title">Enable Wi-Fi filter</string>
    <string name="pref_automatic_download_on_battery_sum">Allow automatic download when the battery is not charging</string>
    <string name="pref_automatic_download_on_battery_title">Download when not charging</string>
    <string name="pref_automatic_download_sum">Configure the automatic download of episodes.</string>
    <string name="pref_automatic_download_title">Automatic Download</string>
    <string name="pref_back_button_behavior_sum">Change behavior of the back button.</string>
    <string name="pref_back_button_behavior_title">Back Button Behavior</string>
    <string name="pref_cast_message">@string/pref_cast_message_free_flavor</string>
    <string name="pref_cast_title">Chromecast support</string>
    <string name="pref_compact_notification_buttons_sum">Change the playback buttons on the lockscreen. The play/pause button is always included.</string>
    <string name="pref_compact_notification_buttons_title">Set Lockscreen Buttons</string>
    <string name="pref_enqueue_downloaded_summary">Add downloaded episodes to the queue</string>
    <string name="pref_enqueue_downloaded_title">Enqueue Downloaded</string>
    <string name="pref_episode_cache_title">Episode Cache</string>
    <string name="pref_episode_cleanup_summary">"Episodes that aren't in the queue and aren't favorites should be eligible for removal if Auto Download needs space for new episodes"</string>
    <string name="pref_episode_cleanup_title">Episode Cleanup</string>
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_expandNotify_title">High Notification priority</string>
    <string name="pref_faq">FAQ</string>
    <string name="pref_fast_forward">Fast Forward Skip Time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast forward button is clicked</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_followQueue_title">Continuous Playback</string>
    <string name="pref_gpodnet_authenticate_sum">Login with your gpodder.net account in order to sync your subscriptions.</string>
    <string name="pref_gpodnet_authenticate_title">Login</string>
    <string name="pref_gpodnet_full_sync_sum">Sync all subscriptions and episode states with gpodder.net.</string>
    <string name="pref_gpodnet_full_sync_title">Full sync now</string>
    <string name="pref_gpodnet_logout_title">Logout</string>
    <string name="pref_gpodnet_notifications_sum">This setting does not apply to authentication errors.</string>
    <string name="pref_gpodnet_notifications_title">Show sync error notifications</string>
    <string name="pref_gpodnet_sethostname_title">Set hostname</string>
    <string name="pref_gpodnet_setlogin_information_sum">Change the login information for your gpodder.net account.</string>
    <string name="pref_gpodnet_setlogin_information_title">Change login information</string>
    <string name="pref_gpodnet_sync_changes_sum">Sync subscription and episode state changes with gpodder.net.</string>
    <string name="pref_gpodnet_sync_changes_title">Sync changes now</string>
    <string name="pref_hardwareForwardButtonSkips_sum">When pressing a forward button on a bluetooth-connected device skip to the next episode instead of fast-forwarding</string>
    <string name="pref_hardwareForwardButtonSkips_title">Forward Button Skips</string>
    <string name="pref_hardwarePreviousButtonRestarts_sum">When pressing a hardware previous button restart playing the current episode instead of rewinding</string>
    <string name="pref_hardwarePreviousButtonRestarts_title">Previous button restarts</string>
    <string name="pref_known_issues">Known issues</string>
    <string name="pref_lockscreen_background_sum">"Set the lockscreen background to the current episode's image. As a side effect, this will also show the image in third party apps."</string>
    <string name="pref_lockscreen_background_title">Set Lockscreen Background</string>
    <string name="pref_media_player_message">Select which media player to use to play files</string>
    <string name="pref_mobileUpdate_sum">Allow updates over the mobile data connection</string>
    <string name="pref_mobileUpdate_title">Mobile Updates</string>
    <string name="pref_nav_drawer_feed_counter_sum">"Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if 'Subscription Order' is set to 'Counter'."</string>
    <string name="pref_nav_drawer_feed_counter_title">Set Subscription Counter</string>
    <string name="pref_nav_drawer_feed_order_sum">Change the order of your subscriptions</string>
    <string name="pref_nav_drawer_feed_order_title">Set Subscription Order</string>
    <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer.</string>
    <string name="pref_nav_drawer_items_title">Set Navigation Drawer items</string>
    <string name="pref_parallel_downloads_title">Parallel Downloads</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or bluetooth are disconnected</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones Disconnect</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for Interruptions</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused.</string>
    <string name="pref_persistNotify_title">Persistent Playback Controls</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed audio playback</string>
    <string name="pref_playback_speed_title">Playback Speeds</string>
    <string name="pref_proxy_sum">Set a network proxy</string>
    <string name="pref_proxy_title">Proxy</string>
    <string name="pref_queueAddToFront_sum">Add new episodes to the front of the queue.</string>
    <string name="pref_queueAddToFront_title">Enqueue at Front</string>
    <string name="pref_resumeAfterCall_sum">Resume playback after a phone call completes</string>
    <string name="pref_resumeAfterCall_title">Resume after Call</string>
    <string name="pref_rewind">Rewind Skip Time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_set_theme_sum">Change the appearance of AntennaPod.</string>
    <string name="pref_set_theme_title">Select Theme</string>
    <string name="pref_showDownloadReport_sum">If downloads fail, generate a report that shows the details of the failure.</string>
    <string name="pref_showDownloadReport_title">Show Download Report</string>
    <string name="pref_skip_keeps_episodes_sum">Keep episodes when they are skipped</string>
    <string name="pref_skip_keeps_episodes_title">Keep Skipped Episodes</string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
    <string name="pref_smart_mark_as_played_title">Smart Mark as Played</string>
    <string name="pref_unpauseOnBluetoothReconnect_sum">Resume playback when bluetooth reconnects</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth Reconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_sum">Resume playback when the headphones are reconnected</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones Reconnect</string>
    <string name="pref_videoBehavior_sum">Behavior when leaving video playback</string>
    <string name="pref_videoBehavior_title">Upon exiting video</string>
    <string name="project_pref">Project</string>
    <string name="queue_label">Queue</string>
    <string name="refresh_label">Refresh</string>
    <string name="remove_feed_label">Remove podcast</string>
    <string name="remove_from_favorite_label">Remove from Favorites</string>
    <string name="remove_from_queue_label">Remove from Queue</string>
    <string name="rename_feed_label">Rename podcast</string>
    <string name="reset_position">Reset Playback Position</string>
    <string name="search_label">Search</string>
    <string name="set_sleeptimer_label">Set sleep timer</string>
    <string name="share_feed_url_label">Share Feed URL</string>
    <string name="share_file_label">Share File</string>
    <string name="share_item_url_label">Share Media File URL</string>
    <string name="share_item_url_with_position_label">Share Media File URL with Position</string>
    <string name="share_label">Share…</string>
    <string name="share_link_label">Share Episode URL</string>
    <string name="share_link_with_position_label">Share Episode URL with Position</string>
    <string name="skip_episode_label">Skip episode</string>
    <string name="sleep_timer_label">Sleep timer</string>
    <string name="statistics_label">Statistics</string>
    <string name="storage_pref">Storage</string>
    <string name="support_label">Flattr this</string>
    <string name="user_interface_label">User Interface</string>
    <string name="visit_website_label">Visit Website</string>
</resources>