<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/interruptions">
        <SwitchPreference android:enabled="true" android:title="@string/pref_pauseOnHeadsetDisconnect_title" android:key="prefPauseOnHeadsetDisconnect" android:summary="@string/pref_pauseOnDisconnect_sum" android:defaultValue="true" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_unpauseOnHeadsetReconnect_title" android:key="prefUnpauseOnHeadsetReconnect" android:summary="@string/pref_unpauseOnHeadsetReconnect_sum" android:dependency="prefPauseOnHeadsetDisconnect" android:defaultValue="true" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_unpauseOnBluetoothReconnect_title" android:key="prefUnpauseOnBluetoothReconnect" android:summary="@string/pref_unpauseOnBluetoothReconnect_sum" android:dependency="prefPauseOnHeadsetDisconnect" android:defaultValue="false" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_pausePlaybackForFocusLoss_title" android:key="prefPauseForFocusLoss" android:summary="@string/pref_pausePlaybackForFocusLoss_sum" android:defaultValue="false" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_resumeAfterCall_title" android:key="prefResumeAfterCall" android:summary="@string/pref_resumeAfterCall_sum" android:defaultValue="true" />
        <ListPreference android:entries="@array/video_background_behavior_options" android:title="@string/pref_videoBehavior_title" android:key="prefVideoBehavior" android:summary="@string/pref_videoBehavior_sum" android:defaultValue="stop" android:entryValues="@array/video_background_behavior_values" app:useStockLayout="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/buttons">
        <SwitchPreference android:enabled="true" android:title="@string/pref_hardwareForwardButtonSkips_title" android:key="prefHardwareForwardButtonSkips" android:summary="@string/pref_hardwareForwardButtonSkips_sum" android:defaultValue="false" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_hardwarePreviousButtonRestarts_title" android:key="prefHardwarePreviousButtonRestarts" android:summary="@string/pref_hardwarePreviousButtonRestarts_sum" android:defaultValue="false" />
        <Preference android:title="@string/pref_fast_forward" android:key="prefPlaybackFastForwardDeltaLauncher" android:summary="@string/pref_fast_forward_sum" />
        <Preference android:title="@string/pref_rewind" android:key="prefPlaybackRewindDeltaLauncher" android:summary="@string/pref_rewind_sum" />
        <Preference android:title="@string/pref_playback_speed_title" android:key="prefPlaybackSpeedLauncher" android:summary="@string/pref_playback_speed_sum" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/queue_label">
        <SwitchPreference android:enabled="true" android:title="@string/pref_enqueue_downloaded_title" android:key="prefEnqueueDownloaded" android:summary="@string/pref_enqueue_downloaded_summary" android:defaultValue="true" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_queueAddToFront_title" android:key="prefQueueAddToFront" android:summary="@string/pref_queueAddToFront_sum" android:defaultValue="false" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_followQueue_title" android:key="prefFollowQueue" android:summary="@string/pref_followQueue_sum" android:defaultValue="true" />
        <ListPreference android:entries="@array/smart_mark_as_played_values" android:title="@string/pref_smart_mark_as_played_title" android:key="prefSmartMarkAsPlayedSecs" android:summary="@string/pref_smart_mark_as_played_sum" android:defaultValue="30" android:entryValues="@array/smart_mark_as_played_values" app:useStockLayout="true" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_skip_keeps_episodes_title" android:key="prefSkipKeepsEpisode" android:summary="@string/pref_skip_keeps_episodes_sum" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/media_player">
        <ListPreference android:entries="@array/media_player_options" android:title="@string/media_player" android:key="prefMediaPlayer" android:summary="@string/pref_media_player_message" android:defaultValue="sonic" android:entryValues="@array/media_player_values" app:useStockLayout="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/experimental_pref">
        <SwitchPreference android:enabled="true" android:title="@string/pref_cast_title" android:key="prefCast" android:summary="@string/pref_cast_message" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>