<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/appearance">
        <ListPreference android:entries="@array/theme_options" android:title="@string/pref_set_theme_title" android:key="prefTheme" android:summary="@string/pref_set_theme_sum" android:defaultValue="0" android:entryValues="@array/theme_values" app:useStockLayout="true" />
        <Preference android:title="@string/pref_nav_drawer_items_title" android:key="prefHiddenDrawerItems" android:summary="@string/pref_nav_drawer_items_sum" />
        <ListPreference android:entries="@array/nav_drawer_feed_order_options" android:title="@string/pref_nav_drawer_feed_order_title" android:key="prefDrawerFeedOrder" android:summary="@string/pref_nav_drawer_feed_order_sum" android:defaultValue="0" android:entryValues="@array/nav_drawer_feed_order_values" app:useStockLayout="true" />
        <ListPreference android:entries="@array/nav_drawer_feed_counter_options" android:title="@string/pref_nav_drawer_feed_counter_title" android:key="prefDrawerFeedIndicator" android:summary="@string/pref_nav_drawer_feed_counter_sum" android:defaultValue="0" android:entryValues="@array/nav_drawer_feed_counter_values" app:useStockLayout="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/external_elements">
        <SwitchPreference android:enabled="true" android:title="@string/pref_expandNotify_title" android:key="prefExpandNotify" android:summary="@string/pref_expandNotify_sum" android:defaultValue="false" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_persistNotify_title" android:key="prefPersistNotify" android:summary="@string/pref_persistNotify_sum" android:defaultValue="true" />
        <Preference android:title="@string/pref_compact_notification_buttons_title" android:key="prefCompactNotificationButtons" android:summary="@string/pref_compact_notification_buttons_sum" />
        <SwitchPreference android:enabled="true" android:title="@string/pref_lockscreen_background_title" android:key="prefLockscreenBackground" android:summary="@string/pref_lockscreen_background_sum" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/behavior">
        <ListPreference android:entries="@array/back_button_behavior_options" android:title="@string/pref_back_button_behavior_title" android:key="prefBackButtonBehavior" android:summary="@string/pref_back_button_behavior_sum" android:defaultValue="default" android:entryValues="@array/back_button_behavior_values" app:useStockLayout="true" />
    </PreferenceCategory>
</PreferenceScreen>