<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/skip_episode_item" android:title="@string/skip_episode_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/mark_read_item" android:title="@string/mark_read_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/mark_unread_item" android:title="@string/mark_unread_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/add_to_queue_item" android:title="@string/add_to_queue_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/remove_from_queue_item" android:title="@string/remove_from_queue_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/add_to_favorites_item" android:menuCategory="container" android:title="@string/add_to_favorite_label" />
    <item android:id="@id/remove_from_favorites_item" android:menuCategory="container" android:title="@string/remove_from_favorite_label" />
    <item android:id="@id/reset_position" android:title="@string/reset_position" custom:showAsAction="collapseActionView" />
    <item android:id="@id/activate_auto_download" android:title="@string/activate_auto_download" custom:showAsAction="collapseActionView" />
    <item android:id="@id/deactivate_auto_download" android:title="@string/deactivate_auto_download" custom:showAsAction="collapseActionView" />
    <item android:icon="?location_web_site" android:id="@id/visit_website_item" android:title="@string/visit_website_label" custom:showAsAction="collapseActionView|ifRoom" />
    <item android:id="@id/share_item" android:menuCategory="container" android:title="@string/share_label">
        <menu>
            <item android:id="@id/share_link_item" android:menuCategory="container" android:title="@string/share_link_label" />
            <item android:id="@id/share_link_with_position_item" android:menuCategory="container" android:title="@string/share_link_with_position_label" />
            <item android:id="@id/share_download_url_item" android:menuCategory="container" android:title="@string/share_item_url_label" />
            <item android:id="@id/share_download_url_with_position_item" android:menuCategory="container" android:title="@string/share_item_url_with_position_label" />
            <item android:id="@id/share_file" android:menuCategory="container" android:title="@string/share_file_label" />
        </menu>
    </item>
    <item android:id="@id/support_item" android:title="@string/support_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/open_podcast" android:title="@string/open_podcast" custom:showAsAction="collapseActionView" />
</menu>